@@ -1,3 +1,9 @@
+2017-01-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* statistics.test: Add tests for test-Tukey-range and test-Dunnett
+	* statistics.tcl: Add two procedures, test-Tukey-range and test-Dunnett, and auxiliary code
+	* statistics.man: Describe the two new procedures
+	* pkgIndex.tcl: Bumped version of the statistics module to 1.1.0
+
 2017-01-10  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* statistics.test: Correct the tests for the test-anova-F procedure
 	* statistics.tcl: Correct the namespace for the test-anova-F procedure and the comment
